...
        val listState = rememberLazyListState()
        val showButton: Boolean by remember {
            derivedStateOf { listState.firstVisibleItemIndex > 0 }
        }
        LazyColumn(
            state = listState, contentPadding = PaddingValues(bottom = 80.dp),
            modifier = modifier.testTag("BookmarkedList")
        ) {
            items(bookMarkedList) { data ->
                TheListAccount(
                    account = data
                )
            }
...
